# R-Type

./: .clang-format  CMakeLists.txt  Doxyfile.txt  README.md  conanfile.txt  tmp.hpp
.github/workflows/: Build-Testing.yml
Client/: main.cpp
Client/ClientNetwork/: ASocket.hpp  ISocket.hpp  TcpNetwork.cpp  TcpNetwork.hpp  UdpNetwork.cpp  UdpNetwork.hpp
Client/Components/: Network.hpp
Client/Systems/: RenderSystem.hpp
Client/include/: typeEncapsulation.hpp
Client/include/Application/: Application.hpp
Client/include/Event/: EventHandler.hpp
Client/include/EventManager/: EventManager.hpp  SFMLEvents.hpp
Client/include/Network/: Client.hpp
Client/include/ObserverPattern/: IObserver.hpp  ObserverString.hpp  Subject.hpp
Client/include/RenderTarget/: IRenderTarget.hpp  RenderTarget.hpp  RenderWindow.hpp
Client/include/Renderer/: Renderer.hpp
Client/include/SceneManager/: SceneManager.hpp
Client/include/window/: AWindow.hpp  IWindow.hpp  Window.hpp
Client/src/Application/: Application.cpp
Client/src/EventManager/: EventManager.cpp
Client/src/Network/: Client.cpp
Client/src/ObserverPattern/: ObserverString.cpp  Subject.cpp
Client/src/RenderTarget/: RenderTarget.cpp  RenderWindow.cpp
Client/src/Renderer/: Renderer.cpp
Client/src/SceneManager/: SceneManager.cpp
Client/src/window/: AWindow.cpp  Window.cpp
Common/: Log.cpp  Log.hpp  Network.hpp
Server/: Main.cpp  Server.cpp  Server.hpp  main.cpp  version.cpp
Server/DynamicLoader/: DynamicLoader.hpp  Exceptions.cpp  Exceptions.hpp  SoLoader.hpp  dlfcn.c  dlfcn.h
Server/Network/: ANetwork.hpp  BoostNetwork.cpp  BoostNetwork.hpp  INetwork.hpp  NetworkBoost.cpp  NetworkBoost.hpp  Room.hpp  Router.hpp
Server/Network/Client/: AClient.hpp  BoostClient.cpp  BoostClient.hpp  ISocket.hpp
Server/Network/Error/: BoostError.hpp  Error.hpp
Server/Network/Network/: ANetwork.hpp  BoostNetwork.cpp  BoostNetwork.hpp  INetwork.hpp  Router.hpp  ThreadPool.hpp
Server/Network/Room/: Room.hpp  RoomManager.hpp
Server/Network/Socket/: ASocket.hpp  ISocket.hpp  TCPBoostSocket.cpp  TCPBoostSocket.hpp  UDPBoostSocket.cpp  UDPBoostSocket.hpp
Server/Network/Worker/: ThreadSafeQueue.hpp  Worker.hpp
doc/: RFC2999.txt
libs/: CMakeLists.txt
ressources/: config.conf
src/: main.cpp
src/Client/: main.cpp  typeEncapsulation.hpp  unique_id.hpp
src/Client/Application/: Application.cpp  Application.hpp
src/Client/ClientNetwork/: ASocket.hpp  ISocket.hpp  TcpNetwork.cpp  TcpNetwork.hpp  UdpNetwork.cpp  UdpNetwork.hpp
src/Client/Components/: MonitorComponent.hpp  Network.hpp  NetworkUpdate.hpp  Rotation.hpp  Sprite.hpp  Texture.hpp  TextureLibrary.hpp
src/Client/EventManager/: EventManager.cpp  EventManager.hpp  SFMLEvents.hpp
src/Client/Game/Scenes/: Menu.cpp  Menu.hpp
src/Client/Game/Systems/: NetworkEntityDestructionSystem.cpp  NetworkEntityDestructionSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  RotationSystem.cpp  RotationSystem.hpp
src/Client/ObserverPattern/: Subject.hpp
src/Client/RenderTarget/: ARenderTarget.hpp  IRenderTarget.hpp  RenderTarget.cpp  RenderTarget.hpp
src/Client/SceneManager/: SceneManager.cpp  SceneManager.hpp
src/Client/Systems/: TestSystem.hpp
src/Client/Window/: AWindow.cpp  AWindow.hpp  IWindow.hpp  Window.cpp  Window.hpp
src/Common/: Log.cpp  Log.hpp  Network.cpp  Network.hpp  unique_id.hpp
src/Common/Component/: Hitbox.hpp  InputQueue.hpp  Movement.hpp  OutputQueue.hpp  PlayerID.hpp  Tag.hpp  Transform.hpp  UniqueID.hpp
src/Common/Components/: Color.hpp  Rectangle.hpp  Tag.hpp
src/Common/ECS/: ComponentArray.hpp  EntityManager.hpp  NetworkPacket.hpp  RenderSystem.hpp  SingletonComponentCollection.hpp  System.hpp  SystemManager.hpp  Types.h  World.hpp
src/Common/Systems/: MovementUpdateSystem.cpp  MovementUpdateSystem.hpp  NetworkSystem.cpp  NetworkSystem.hpp  PhysicSystem.cpp  PhysicSystem.hpp  RenderSystem.hpp  TagSystem.cpp  TagSystem.hpp  TransformSystem.cpp  TransformSystem.hpp
src/Components/: Animation.hpp  Invisibility.hpp  Layers.hpp  Sprite.hpp  Texture.hpp  Transform.hpp  Velocity.hpp
src/ECS/: ComponentManager.hpp  EntityManager.hpp  SystemManager.hpp  Types.h  World.hpp
src/EntityLib/: IEntityFactory.hpp
src/Server/: Main.cpp  Server.hpp
src/Server/EntityLib/: BascicShipFactory.hpp  BasicShipFactory.cpp  BasicShipFactory.hpp  ConfigFile.hpp  DynamicLoader.hpp  IEntityFactory.hpp  MediumShipFactory.cpp  MediumShipFactory.hpp  dlfcn.c  dlfcn.h
src/Server/Network/Client/: AClient.hpp  BoostClient.cpp  BoostClient.hpp
src/Server/Network/Network/: ANetwork.hpp  BoostNetwork.cpp  BoostNetwork.hpp  Router.hpp  ThreadPool.hpp
src/Server/Network/Room/: Room.hpp  RoomManager.hpp
src/Server/Network/Socket/: ASocket.hpp  ISocket.hpp  TCPBoostSocket.cpp  TCPBoostSocket.hpp  UDPBoostSocket.cpp  UDPBoostSocket.hpp
src/Server/Network/Worker/: ThreadSafeQueue.hpp  Worker.hpp
src/Systems/: Move.cpp  Move.hpp  Print.cpp  Print.hpp  RenderSystem.cpp  RenderSystem.hpp  RenderSystem_1.hpp
